objects/UPC_General_Document_Values__mdt.object
<CustomObject>
    <description>Items which apply across all documents</description>
    <fields>
        <fullName>UPC_Document_Language__c</fullName>
        <label>Document Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Letter_Date_Format__c</fullName>
        <description>The pattern to apply to dates that need to be shown in the documents</description>
        <label>Letter Date Format</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Mobile_Text_For_OrderConf__c</fullName>
        <description>Text to display in the order confirmation email when a mobile product is included</description>
        <inlineHelpText>Text to display in the order confirmation email when a mobile product is included</inlineHelpText>
        <label>Mobile Text For OrderConf</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Salutation_Female__c</fullName>
        <description>The greeting to apply to a female addressee</description>
        <inlineHelpText>The greeting to apply to a female addressee</inlineHelpText>
        <label>Salutation Female</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Salutation_Male__c</fullName>
        <description>The greeting to apply to a male addressee</description>
        <inlineHelpText>The greeting to apply to a male addressee</inlineHelpText>
        <label>Salutation Male</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>General Document Value</label>
    <pluralLabel>General Document Values</pluralLabel>
</CustomObject>